--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
     background-color: rgba(224, 215, 211, 0.822);
 }
 
+/* Estilizando as sections vazias */
+
+section {
+    width: 100%;
+}
+
 .interface {
     max-width: 1280px;
     margin: 0 auto;
@@ -39,6 +45,7 @@ header {
     width: 100%;
     top: 0;
     transition: background-color 0.3s, padding 0.3s;
+    z-index: 3;
 }
 
 ul li a {
@@ -177,6 +184,15 @@ section.sobre-mim .flex {
     gap: 65px;
 }
 
+section:nth-of-type(3) {
+    background-image: url(img/background-01.jpg);
+    height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 .sobre-mim h1 {
     color: black;
     font-size: 40px;
@@ -228,6 +244,104 @@ section.sobre-mim .img-topo-site img {
         top: 30px;
     }
 }
+
+/* Estilizando carrossel de icones animados */
+
+
+
+.secao-dos-icones {
+    /* background-color: #bbb9c4; */
+    /* background-color: rgba(224, 215, 211, 0.822); */
+    background-color: rgb(22, 23, 92);
+}
+
+@keyframes carrosselAnimado {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+.icones {
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    
+}
+
+.icones::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100%;
+    background: linear-gradient(to left, rgb(255, 255, 255, 0), rgb(57, 59, 150));
+    content: "";
+    z-index: 2;
+}
+
+.icones:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 100%;
+    background: linear-gradient(to right, rgb(255, 255, 255, 0), rgb(57, 59, 150));
+    content: "";
+    z-index: 2;
+}
+
+.icones:hover .icones-animados {
+    animation-play-state: paused;
+}
+
+.icones i {
+    padding: 25px 60px;
+    margin: 0 40px;
+}
+
+.icones-animados {
+    font-size: 70px;
+    display: inline-block;
+    animation: 20s carrosselAnimado infinite linear ;
+}
+
+/* Cor dos icones do carrossel */
+
+#html {
+    color: orangered;
+}
+
+#css {
+    color: rgb(59, 90, 228);
+}
+
+#js {
+    color: yellow;
+}
+
+#angular {
+    color: #c3002f;
+}
+
+#java {
+    color: rgb(59, 90, 228);
+}
+
+#sql {
+    color: blue;
+}
+
+#bootstrap {
+    color: purple;
+}
+
+
+
+
+
 
 
 
